--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,30 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+cycler==0.10.0
+    # via matplotlib
+kiwisolver==1.3.2
+    # via matplotlib
+matplotlib==3.4.3
+    # via -r requirements.in
 numpy==1.18.4
     # via
     #   -r requirements.in
+    #   matplotlib
     #   pandas
 pandas==1.3.3
     # via -r requirements.in
+pillow==8.3.2
+    # via matplotlib
+pyparsing==2.4.7
+    # via matplotlib
 python-dateutil==2.8.2
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2021.1
     # via pandas
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   cycler
+    #   python-dateutil
